--- a/app/src/main/res/layout-sw600dp/player_overlay.xml
+++ b/app/src/main/res/layout-sw600dp/player_overlay.xml
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LLPlayerOverLay"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="right|end"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|end"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/IVHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/Home" />
-
-        <TextView
-            android:id="@+id/IVAway"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/Away" />
-    </LinearLayout>
+    android:orientation="vertical"
+    android:visibility="gone">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:id="@+id/RVLeft"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+
+        android:layout_alignParentStart="true"
+        android:background="#CC000000" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RVRight"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:background="#CC000000" />
+</RelativeLayout>
