--- a/app/src/main/res/layout/player_overlay.xml
+++ b/app/src/main/res/layout/player_overlay.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LLPlayerOverLay"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="right|end"
+    android:orientation="vertical"
+    android:visibility="gone">
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/tobbar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="#CC000000"
+        android:gravity="right|end"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/TVHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/Home"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/TVAway"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/Away"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RVRight"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tobbar"
+        android:background="#CC000000" />
+</RelativeLayout>
